--- a/src/pages/partials/picture.hbs
+++ b/src/pages/partials/picture.hbs
@@ -3,8 +3,8 @@
 {{#if data-layer }} data-layer {{/if}}
 {{#if data-depth }} data-depth="{{data-depth}}" {{/if}}
 >
-    {{#img src}}
+    {{#img src unlazy }}
         <source srcset='{{avif}}' type='image/avif' >
         <img {{#unless unlazy}} loading="lazy" {{/unless}} src='{{webp}}' alt='{{alt}}'>
-    {{/img}}
+    {{/img }}
 </picture>
